Edited the Page footer

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 <a href="https://medium.com/@hkngeywo" target=”______blank” class="footer__icon"><i class='bx bxl-medium' ></i></a>
 
             </div>
-<p>Copyright ©2023 All rights reserved | This template is made with ♥ <i class="fas fa-heart"></i> by <a href="https://hackerbro.in" target="_blank" rel="noopener noreferrer">Hacker Bro Technologies</a></p>
+<p>Copyright ©2023 All rights reserved | <i class="fas fa-heart"></i></p>
 
 </footer>
 
